--- a/core/templates/core/materials_requests_list.html
+++ b/core/templates/core/materials_requests_list.html
@@ -69,7 +69,7 @@
                         </td>
                         <td>{{ req.items.count }}</td>
                         <td>
-                            <a href="{% url 'material_request_detail' req.id %}" class="btn btn-sm btn-outline-primary">
+                            <a href="{% url 'materials_request_detail' req.id %}" class="btn btn-sm btn-outline-primary">
                                 {% trans "View" %}
                             </a>
                         </td>
